# scene-pilot

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  CLAUDE_cn.md  Plan.md  README.md  electron-builder.yml  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
services/backend/: README.md  pyproject.toml
services/backend/src/recruit_agent/: __init__.py  asset_paths.py  server.py
services/backend/src/recruit_station/: server.py
services/backend/src/scene_pilot/: __init__.py  server.py
services/backend/tests/: conftest.py  test_agent_goal_intake.py  test_agent_router_helpers.py  test_api_app.py  test_api_approvals_metrics.py  test_api_candidates.py  test_api_health.py  test_api_playbook_runtime.py  test_api_recruit_agent.py  test_api_runtime.py  test_api_skill_learning.py  test_api_skills_settings.py  test_api_sync.py  test_api_workflow.py  test_api_workflows.py  test_autonomy_loop.py  test_candidate_progression_selector.py  test_candidate_projection.py  test_candidate_waiting_retry_selector.py  test_canonical_schema_naming.py  test_communication_templates_api.py  test_dashboard_pipeline.py  test_db_base.py  test_db_migrations.py  test_job_descriptions_api.py  test_platform_boss.py  test_runtime_agent_loop.py  test_runtime_prompts.py  test_runtime_providers.py  test_runtime_services.py  test_runtime_tools.py  test_scheduler_queue.py  test_scheduler_serial.py  test_scheduler_workflow.py  test_state_machine_service.py
services/backend/tests/agent_runtime/: fixtures.py  test_engine.py  test_providers.py
services/backend/tests/api/: test_agents_routes.py  test_mcp_routes.py  test_mcp_runtime_bridge.py  test_settings_routes.py  test_sse_events.py  test_turn_routes.py
services/backend/tests/db/: test_schema_terminology.py
services/backend/tests/memory/: test_memory_isolation.py
(+625 files in other folders)
